# GenRec

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: grid_search.py  grid_search.sh
scripts/configs/: grid_search_scaling_sasrec_bce_amazons.sh  grid_search_scaling_sasrec_bce_douban.sh  grid_search_scaling_sasrec_bce_movielens.sh
scripts/configs/genrec/: template.yaml  tiger_ce_amazon-beauty.yaml
scripts/configs/quantizer/: rqvae_movielens-1m.yaml  template.yaml
scripts/configs/seqrec/: hstu_spring_bce_movielens-1m.yaml  hstu_sprint_bce_movielens-1m.yaml  sasrec_bce_amazons.yaml  sasrec_bce_movielens-1m.yaml  sasrec_dros_amazons.yaml  sasrec_dros_movielens-1m.yaml  sasrec_spring_bce_amazon-beauty.yaml  sasrec_spring_movielens-1m.yaml  sasrec_sprint_bce_amazon-beauty.yaml  template.yaml
scripts/sasrec2hstu/: ffn.yaml  gated_attention.yaml  learnable_attention_pe.yaml  sasrechstu_spring_bce_amazon-beauty.yaml  silu_activation.yaml
src/genrec/: __init__.py  main_genrec.py  main_quantizer.py  main_seqrec.py
src/genrec/datasets/: __init__.py  base.py  dataset_genrec.py  dataset_quantizer.py  dataset_seqrec.py
src/genrec/models/: __init__.py
src/genrec/trainers/: __init__.py
tests/datasets/: test_dataset.py  test_dataset_utils.py  test_lm_encoder.py  test_prefix_tree.py
tests/models/model_genrec/: test_tiger.py
tests/models/model_quantizer/: __init__.py  test_base.py  test_rqvae.py
tests/models/model_seqrec/: test_hstu.py  test_hstu_spring.py  (+2 more)
tests/trainers/: test_trainer_seqrec.py
(+133 files in other folders)
